# edgekeep

./: .gitignore  README.md  pyproject.toml
src/edgekeep/: __init__.py  _uuid7.py  keep.py  sender.py  transport.py
tests/: _crash_worker.py  _crash_worker_sender.py  _fake_transport.py  test_crash_recovery.py  test_future_races.py  test_metrics.py  test_sender_crash_recovery.py  test_sender_mosquitto_integration.py  test_sender_state_machine.py
